"Added a rule to compareBalances"